# graphrag

./: .env.example  .gitignore  .npmrc  AGENTS.md  ARCHITECTURE_REVIEW_2025-10-30.md  BUILD_STATUS.md  CIRCUIT_BREAKER_PERSISTENCE_IMPLEMENTATION.md  CLAUDE.md  Dockerfile.qdrant-test  ERROR_HANDLING_REVIEW.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_CRITICAL_FIXES.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  PROMPT_KIT_MIGRATION.md  README.md  REMEDIATION_PLAN.md  TESTING_ASSESSMENT.md  TYPE_SAFETY_REVIEW.md  docker-compose.test.yml  kill-ports.sh  package-lock.json  package.json
.docs/: CACHING_STRATEGY.md  COMPREHENSIVE_INVESTIGATION_REPORT.md  REAL-WORLD-TEST-RESULTS.md  RESILIENCE_PATTERNS.md  api-protection-implementation.md  language-filtering-demo.sh  language-filtering-implementation.md  notebooklm-final.html  tdd-test-coverage-report.md  test-results-language-filtering.md
apps/api/: .env.example  .gitignore  CLAUDE.md  README.md  graphrag.db  pyproject.toml  requirements.txt  start.sh  test_circuit_breaker_persistence.py
apps/api/app/: __init__.py  dependencies.py  main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: cache.py  chat.py  conversations.py  crawl.py  extract.py  graph.py  map.py  query.py  scrape.py  search.py  webhooks.py
apps/api/app/core/: circuit_breaker_persistence.py  config.py  resilience.py
apps/api/app/db/: database.py  models.py
apps/api/app/models/: __init__.py  firecrawl.py
apps/api/app/services/: document_processor.py  embeddings.py  entity_extractor.py  firecrawl.py  graph_db.py  hybrid_query.py  language_detection.py  llm.py  query_cache.py  redis_service.py  relationship_extractor.py  vector_db.py
apps/api/tests/: conftest.py
apps/api/tests/api/v1/endpoints/: __init__.py  test_chat.py  test_conversations.py  test_crawl_lifecycle.py  test_graph.py  test_scrape.py  test_stats.py  test_webhook_deduplication.py  test_webhooks.py  test_webhooks_security.py  test_webhooks_signature.py
apps/api/tests/core/: test_circuit_breaker_persistence.py  test_config_validation.py  test_dependencies.py  test_resilience.py
apps/api/tests/db/: test_database_service.py  test_models.py
apps/api/tests/integration/: TEST_RESULTS_PHASE1.md  __init__.py  test_circuit_breaker_persistence.py  test_phase1_error_handling.py  test_real_services.py  test_webhook_e2e.py
apps/api/tests/models/: README.md  conftest.py  test_firecrawl_models.py
apps/api/tests/services/: test_document_processor.py  test_entity_extractor.py  test_firecrawl.py  test_firecrawl_connection_pooling.py  test_firecrawl_lifecycle.py  test_graph_db.py  test_hybrid_query.py  test_language_detection.py  test_language_detection_cache.py  test_llm.py  test_query_cache.py  test_redis_deduplication.py  test_redis_service.py  test_relationship_extractor.py  test_vector_db.py  test_vector_db_async.py
(+215 files in other folders)
